flux/apps/paperless-ngx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - paperless.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: paperless-ngx
      port: 8000
